feat: implement export tab in frontend docs: update export-bundle documentation docs: update query-contract and openapi.yaml feat: send buffer along with filename as controller response feat: complete events export controller fix: remove rate limit middleware from exports routes feat: add Parquet file to export bundle refactor: centralize config params into a single config store feat: define BottomPanel actions feat: update DetailTab actions feat: enable noUnusedLocals in tsconfig
